# notes-vault

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  static-docs.yml
docs/: cli.md  concepts.md  configuration.md  development.md  index.md  installation.md  quickstart.md
spec/: access-control.md  api-keys.md  configuration.md  consumers.md  file-groups.md  indexing.md  query.md  sensitivity-detection.md  sensitivity-levels.md  storage.md  syncer.md
src/notes_vault/: access_control.py  cli.py  config.py  indexer.py  models.py  sensitivity.py  storage.py  syncer.py
src/notes_vault/commands/: admin.py  consumers.py  files.py  keys.py  sensitivity.py  user.py
tests/: conftest.py  helpers.py  test_access_control.py  test_config.py  test_indexer.py  test_models.py  test_query.py  test_sensitivity.py  test_storage.py  test_syncer.py
