[project]
name = "notes-vault"
version = "0.1.0"
description = "Privacy-sensitive notes sync CLI tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.5.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "structlog>=25.5.0",
]

[project.scripts]
notes-vault = "notes_vault.cli:main"
nv = "notes_vault.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.0",
    {include-group = "docs"},
]

docs = [
    "mkdocs-material[imaging]>=9.4.0",
    "zensical>=0.0.23",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-nauto"

[tool.uv]
package = true
